program almost done

--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESD</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image" href="image/ESD_LOGO_Rectangular.png">
 </head>
 <body>
     <div>
-        <h1>ESD</h1>
-        <ul class="navbar">
-            <a href="#"><li>Home</li></a>
-            <a href="#"><li>Galary</li></a>
-            <a href="#"><li>Teachers</li></a>
-            <a href="#"><li>About us</li></a>
-        </ul>
+        <nav class="navbar">
+            <div>
+                <img src="image/ESD_LOGO_Rectangular.png" alt="ESD">
+        <h1 style="color: rgb(2, 74, 122);">Employee Skill Devlopment</h1>
+            </div>
+        <div>
+            <ul>
+                <a href="#"><li>Home</li></a>
+                <a href="#"><li>Galary</li></a>
+                <a href="#"><li>Teachers</li></a>
+                <a href="#"><li>About us</li></a>
+            </ul>
+        </div>
+        
+    </nav>
     </div>
     <div class="body">
 
