--- a/index.html
+++ b/index.html
@@ -10,26 +10,24 @@
 <body>
     <div>
         <nav class="navbar">
-            <div>
+            <div class="logo">
                 <img src="image/ESD_LOGO_Rectangular.png" alt="ESD">
         <h1 style="color: rgb(2, 74, 122);">Employee Skill Devlopment</h1>
             </div>
         <div>
             <ul>
-                <a href="#"><li>Home</li></a>
-                <a href="#"><li>Galary</li></a>
-                <a href="#"><li>Teachers</li></a>
-                <a href="#"><li>About us</li></a>
+                <a href="#"><li>About ESD</li></a>
             </ul>
         </div>
         
     </nav>
     </div>
     <div class="body">
-        
+
     </div>
     <div class="footer">
-
+        <p style="color: aliceblue; font-size:20px;">&copy; Employee Skill Devlopment program</p>
+        <p style="color: aliceblue; font-size:20px;">All rights reserved | Terms and Use | Privacy Policy</p> 
     </div>
 </body>
 </html>
