--- a/index.html
+++ b/index.html
@@ -16,13 +16,41 @@
             </div>
         <div>
             <ul>
-                <a href="#"><li>About ESD</li></a>
+                <a href="#"><li>Home</li></a>
+                <a href="#"><li>Teachers</li></a>
+                <a href="#"><li>Gellary</li></a>
+                <a href="#"><li>About Us</li></a>
             </ul>
         </div>
         
     </nav>
     </div>
     <div class="body">
+        <h1>About ESD</h1>
+        <br>
+        <h1>ESD (Employee Skill's Devlopment) :-</h1>
+        <blockquote>
+            <p><strong>
+                <i>ESD program is for the Student to Devloped him/her skills.
+                    Employee skill development is a crucial aspect of employee 
+                    training and development programs. Upskilling and reskilling 
+                    employees is the primary focus of L&D programs in 2022, 
+                    as it helps workers meet organizational standards, 
+                    reduces replacement costs, and improves workplace 
+                    performance.2 Employee training programs help employees
+                     learn specific knowledge or skills to improve performance
+                      in their current roles, while employee development focuses
+                       on employee growth and future performance, rather than an
+                        immediate job role.1 High-impact training and development
+                         programs don't just happen, and managers and employees
+                          work together to create a development plan that 
+                          identifies areas to develop or enhance and ascertains
+                           what actions or activities need to be taken to acquire
+                            and embed that learning. </i>
+            </strong>
+                 </p>
+        </blockquote>
+        
 
     </div>
     <div class="footer">
