--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                     employees is the primary focus of L&D programs in 2022, 
                     as it helps workers meet organizational standards, 
                     reduces replacement costs, and improves workplace 
-                    performance.2 Employee training programs help employees
+                    performance. Employee training programs help employees
                      learn specific knowledge or skills to improve performance
                       in their current roles, while employee development focuses
                        on employee growth and future performance, rather than an
-                        immediate job role.1 High-impact training and development
+                        immediate job role. High-impact training and development
                          programs don't just happen, and managers and employees
                           work together to create a development plan that 
                           identifies areas to develop or enhance and ascertains
